# secretenv

./: .editorconfig  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  install.sh  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml  security.yml
crates/backends/backend-1password/: Cargo.toml
crates/backends/backend-1password/src/: lib.rs
crates/backends/backend-aws-ssm/: Cargo.toml
crates/backends/backend-aws-ssm/src/: lib.rs
crates/backends/backend-local/: Cargo.toml
crates/backends/backend-local/src/: lib.rs
crates/backends/secretenv-backend-1password/: Cargo.toml
crates/backends/secretenv-backend-aws-secrets/: Cargo.toml
crates/backends/secretenv-backend-aws-secrets/src/: lib.rs
crates/backends/secretenv-backend-aws-ssm/: Cargo.toml
crates/backends/secretenv-backend-azure/: Cargo.toml
crates/backends/secretenv-backend-azure/src/: lib.rs
crates/backends/secretenv-backend-bitwarden-sm/: Cargo.toml
crates/backends/secretenv-backend-gcp/: Cargo.toml
crates/backends/secretenv-backend-gcp/src/: lib.rs
crates/backends/secretenv-backend-keeper/: Cargo.toml
crates/backends/secretenv-backend-keeper/src/: lib.rs
crates/backends/secretenv-backend-vault/: Cargo.toml
crates/backends/secretenv-backend-vault/src/: lib.rs
crates/secretenv-backends-init/: Cargo.toml
crates/secretenv-backends-init/src/: lib.rs
crates/secretenv-cli/: Cargo.toml
crates/secretenv-cli/src/: backends_init.rs  cli.rs  doctor.rs  invite.rs  main.rs  migrate.rs  profile.rs  reports.rs  setup.rs
crates/secretenv-cli/tests/: cli.rs  e2e.rs
crates/secretenv-core/: Cargo.toml
crates/secretenv-core/src/: backend.rs  backend_error.rs  config.rs  factory_helpers.rs  lib.rs  manifest.rs  mcp_safe.rs  registry.rs  resolver.rs  runner.rs  secret.rs  status.rs  timeouts.rs  uri.rs
crates/secretenv-core/src/redact/: mod.rs  stream.rs
crates/secretenv-core/tests/: mcp_safe_trybuild.rs  redact_mode_b.rs  value_access_trybuild.rs
crates/secretenv-core/tests/mcp_safe_ui/: backend_not_re_exported.rs  backend_not_re_exported.stderr  build_env_not_re_exported.rs  build_env_not_re_exported.stderr  env_entry_value_is_gated.rs  env_entry_value_is_gated.stderr  expose_secret_is_gated.rs  expose_secret_is_gated.stderr
crates/secretenv-core/tests/value_access_ui/: backend_not_re_exported.stderr  build_env_not_re_exported.stderr  env_entry_value_is_gated.stderr  expose_secret_is_gated.stderr
crates/secretenv-mcp/: Cargo.toml  clippy.toml  tools-inventory.yaml
crates/secretenv-mcp-config/: Cargo.toml
crates/secretenv-mcp-config/src/: lib.rs
crates/secretenv-mcp/src/: audit_log.rs  boundary.rs  config.rs  error.rs  lib.rs  mutation_runner.rs  policy.rs  server.rs  setup.rs
crates/secretenv-mcp/src/internal/: gen_engine.rs  mod.rs  redact_file.rs
crates/secretenv-mcp/src/tools/: aliases.rs  args.rs  doctor.rs  helpers.rs  init_project.rs  mod.rs  password_managers.rs  registry_writer.rs
crates/secretenv-mcp/tests/: boundary_test.rs  secret_not_serializable.rs  tool_registration.rs  uri_not_in_error_message.rs
crates/secretenv-mcp/tests/boundary_ui/: secret_is_not_serializable.rs  secret_is_not_serializable.stderr
crates/secretenv-migrate/: Cargo.toml
crates/secretenv-migrate/src/: lib.rs  mcp_safe.rs
crates/secretenv-registry-mutate/: Cargo.toml
crates/secretenv-registry-mutate/src/: lib.rs
crates/secretenv-telemetry/: Cargo.toml
crates/secretenv-telemetry/src/: backend_error_redaction.rs  error_kind.rs  event.rs  init.rs  lib.rs  local_trace.rs  metrics.rs  policy.rs  sampler.rs  sink.rs  span.rs
crates/secretenv-telemetry/tests/: local_trace_double_install.rs  metrics_emitted.rs  mutation_never_sampled.rs  mutation_real_name_sampled.rs  mutation_span_name_structural_binding.rs  no_alias_uri_in_otel.rs  no_mcp_argument_reason_in_otel.rs  no_redact_alias_in_otel.rs  phase4_schema_reserved_spans.rs  span_attributes_emitted.rs  ts12_stderr_in_otel.rs
crates/secretenv-telemetry/tests/ui_sec_inv_04/: no_escape_hatch.rs  no_escape_hatch.stderr  record_alias_uri_absent.rs  record_alias_uri_absent.stderr
crates/secretenv-telemetry/tests/ui_sec_inv_12/: record_mcp_argument_reason_absent.rs  record_mcp_argument_reason_absent.stderr
crates/secretenv-telemetry/tests/ui_sec_inv_19/: record_redact_alias_name_absent.rs  record_redact_alias_name_absent.stderr
crates/secretenv-testing/: Cargo.toml
crates/secretenv-testing/src/: lib.rs  strict.rs
docs/: README.md  adding-a-backend.md  ci-cd.md  configuration.md  fragment-vocabulary.md  index.md  package-lock.json  package.json  registry.md  security.md  stability.md
docs/.cloudfront/: url-rewrite.js
docs/.vitepress/: config.ts
docs/backends/: 1password.md  README.md  aws-secrets.md  aws-ssm.md  azure.md  bitwarden-sm.md  cf-kv.md  conjur.md  doppler.md  gcp.md  infisical.md  keeper.md  keychain.md  local.md  openbao.md  vault.md
docs/comparisons/: README.md  vs-direnv.md  vs-dotenv.md  vs-external-secrets-operator.md  vs-fnox.md  vs-op-run.md  vs-pulumi-esc.md  vs-sops.md  vs-vault-and-conjur.md
docs/guides/: ci-cd.md  rollout.md
docs/reference/: adding-a-backend.md  cli-reference-full.md  configuration.md  fragment-vocabulary.md  mcp.md  migrate.md  opentelemetry.md  profiles.md  redact.md  registry.md  three-file-model-deep.md
examples/: README.md
examples/cascade-local-then-vault/: README.md  config.toml  secretenv.toml
examples/ci-github-actions/: README.md  deploy.yml  secretenv.toml
examples/multi-cloud-aws-and-1password/: README.md  config.toml  secretenv.toml
examples/secretenv-toml-canonical/: README.md  secretenv.toml
examples/single-backend-aws-ssm/: README.md  config.toml  secretenv.toml
examples/single-backend-keychain/: README.md  config.toml  secretenv.toml
examples/single-backend-local/: README.md  config.toml  secretenv.toml
scripts/: check_tracing_leaks.sh
scripts/smoke-test/: README.md  provision.sh  run-tests.sh  source-env.sh  teardown.sh
(+37 files in other folders)
