[workspace]
resolver = "2"
members = [
    "crates/secretenv-core",
    "crates/secretenv-cli",
    "crates/backends/backend-local",
    "crates/backends/backend-aws-ssm",
    "crates/backends/backend-1password",
]

[workspace.package]
version      = "0.2.0"
edition      = "2021"
license      = "MIT"
repository   = "https://github.com/TechAlchemistX/secretenv"
homepage     = "https://secretenv.dev"
authors      = ["Mandeep Patel <mandeep@techalchemist.io>"]
rust-version = "1.75"
keywords     = ["secrets", "cli", "environment", "aws", "vault"]
categories   = ["command-line-utilities", "development-tools"]
readme       = "README.md"

[workspace.dependencies]
# Path + version combo: cargo uses `path` for local builds and `version` for
# `cargo publish` metadata. Both must match the workspace.package.version.
# Directory names stay unprefixed (`backends/backend-local`); only the
# published crate names carry the `secretenv-` prefix to keep crates.io tidy.
secretenv-core               = { path = "crates/secretenv-core",              version = "0.2.0" }
secretenv-backend-local      = { path = "crates/backends/backend-local",      version = "0.2.0" }
secretenv-backend-aws-ssm    = { path = "crates/backends/backend-aws-ssm",    version = "0.2.0" }
secretenv-backend-1password  = { path = "crates/backends/backend-1password",  version = "0.2.0" }
anyhow             = "1"
async-trait        = "0.1"
clap               = { version = "4", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
tokio              = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util", "fs", "time"] }
thiserror          = "1"
zeroize            = { version = "1", features = ["zeroize_derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap           = { version = "2", features = ["serde"] }
directories        = "5"
futures            = "0.3"
tempfile           = "3"
assert_cmd         = "2"
predicates         = "3"

[workspace.lints.rust]
unsafe_code     = "forbid"
missing_docs    = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all         = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
cargo       = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# Transitive-dep version conflicts are unresolvable in a binary crate that
# pulls tokio + tempfile + directories; cargo-deny already surfaces them
# with multiple-versions = "warn". Suppressing the clippy duplicate.
multiple_crate_versions = "allow"
