[workspace]
resolver = "2"
members = [
    "crates/secretenv-core",
    "crates/secretenv-cli",
    "crates/secretenv-testing",
    "crates/backends/secretenv-backend-local",
    "crates/backends/secretenv-backend-aws-ssm",
    "crates/backends/secretenv-backend-1password",
    "crates/backends/secretenv-backend-vault",
    "crates/backends/secretenv-backend-aws-secrets",
    "crates/backends/secretenv-backend-gcp",
    "crates/backends/secretenv-backend-azure",
    "crates/backends/secretenv-backend-keychain",
    "crates/backends/secretenv-backend-doppler",
]

[workspace.package]
version      = "0.6.0"
edition      = "2021"
license      = "AGPL-3.0-only"
repository   = "https://github.com/TechAlchemistX/secretenv"
homepage     = "https://secretenv.io"
authors      = ["Mandeep Patel <mandeep@techalchemist.io>"]
rust-version = "1.75"
keywords     = ["secrets", "cli", "environment", "aws", "vault"]
categories   = ["command-line-utilities", "development-tools"]
readme       = "README.md"

[workspace.dependencies]
# Path + version combo: cargo uses `path` for local builds and `version` for
# `cargo publish` metadata. Both must match the workspace.package.version.
# Directory names mirror published crate names for the internal crates
# (`secretenv-core`, `secretenv-backend-*`). The CLI is the exception: it
# lives at `crates/secretenv-cli/` but publishes as `secretenv` so
# `cargo install secretenv` and the binary name line up.
secretenv-core               = { path = "crates/secretenv-core",                           version = "0.6.0" }
secretenv-backend-local      = { path = "crates/backends/secretenv-backend-local",         version = "0.6.0" }
secretenv-backend-aws-ssm    = { path = "crates/backends/secretenv-backend-aws-ssm",       version = "0.6.0" }
secretenv-backend-1password  = { path = "crates/backends/secretenv-backend-1password",     version = "0.6.0" }
secretenv-backend-vault      = { path = "crates/backends/secretenv-backend-vault",         version = "0.6.0" }
secretenv-backend-aws-secrets = { path = "crates/backends/secretenv-backend-aws-secrets",  version = "0.6.0" }
secretenv-backend-gcp        = { path = "crates/backends/secretenv-backend-gcp",           version = "0.6.0" }
secretenv-backend-azure      = { path = "crates/backends/secretenv-backend-azure",         version = "0.6.0" }
secretenv-backend-keychain   = { path = "crates/backends/secretenv-backend-keychain",      version = "0.6.0" }
secretenv-backend-doppler    = { path = "crates/backends/secretenv-backend-doppler",       version = "0.6.0" }
# Unpublished test harness — path-only, no version. Revisit publishing once
# the API has proven itself across Vault + AWS Secrets backends (v0.3+).
secretenv-testing            = { path = "crates/secretenv-testing" }
anyhow             = "1"
async-trait        = "0.1"
clap               = { version = "4", features = ["derive"] }
clap_complete      = "4"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
tokio              = { version = "1", features = ["process", "rt-multi-thread", "macros", "io-util", "fs", "time"] }
thiserror          = "1"
zeroize            = { version = "1", features = ["zeroize_derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indexmap           = { version = "2", features = ["serde"] }
regex              = "1"
directories        = "5"
futures            = "0.3"
tempfile           = "3"
assert_cmd         = "2"
predicates         = "3"

[workspace.lints.rust]
unsafe_code     = "forbid"
missing_docs    = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all         = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
cargo       = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
# Transitive-dep version conflicts are unresolvable in a binary crate that
# pulls tokio + tempfile + directories; cargo-deny already surfaces them
# with multiple-versions = "warn". Suppressing the clippy duplicate.
multiple_crate_versions = "allow"
