[package]
name        = "secretenv"
description = "SecretEnv CLI — resolves aliases to secrets and runs commands with them injected"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[[bin]]
name = "secretenv"
path = "src/main.rs"

[dependencies]
secretenv-core.workspace             = true
secretenv-backend-local.workspace    = true
secretenv-backend-aws-ssm.workspace  = true
secretenv-backend-1password.workspace = true
anyhow.workspace              = true
clap.workspace                = true
directories.workspace         = true
futures.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
tokio.workspace               = true
toml.workspace                = true
tracing.workspace             = true
tracing-subscriber.workspace  = true

[dev-dependencies]
assert_cmd.workspace         = true
predicates.workspace         = true
secretenv-testing.workspace  = true
tempfile.workspace           = true

[lints]
workspace = true
