[package]
name        = "secretenv-core"
description = "SecretEnv — core types, traits, and plugin registry"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[features]
# Default features intentionally empty — the SAFE surface is the
# default (today's `mcp-safe`-enabled view). Consumers must opt-in
# via `value-access` to access value-producing APIs.
#
# **v0.15 BREAKING (arch-H2 — feature polarity flip).** v0.14 shipped
# a subtractive `mcp-safe` feature; subtractive features are a Cargo
# anti-pattern because Cargo's feature unification makes them
# unreachable to downstream embedders that need them. v0.15 inverts:
# additive `value-access` opt-in. The v0.16 MCP server takes no
# features and inherits the safe surface; the CLI explicitly
# enables `value-access`.
default = []

# Enables value-producing APIs: `Secret<T>::expose_secret`,
# `pub use Backend`, `EnvEntry::value()`, `pub mod runner`, and
# the `run` / `run_with_options` / `build_env` / `EnvEntry` /
# `RedactMode` / `RunOptions` re-exports. Consumers that link
# without this feature (the v0.16 MCP server) lose value access
# by construction — no `#[allow]` escape hatch, the methods do not
# compile.
value-access = []

[dependencies]
aho-corasick.workspace = true
anyhow.workspace      = true
async-trait.workspace = true
directories.workspace = true
futures.workspace     = true
indexmap.workspace    = true
serde.workspace       = true
serde_json.workspace  = true
# `tempfile` is a runtime dep (used by `redact::scrub_file_in_place`'s
# atomic-rename path), in addition to staying as a dev-dep.
tempfile.workspace    = true
thiserror.workspace   = true
tokio.workspace       = true
toml.workspace        = true
tracing.workspace     = true
zeroize.workspace     = true

[target.'cfg(unix)'.dependencies]
# `rustix` is the only legitimate Unix-only dep here — it provides
# safe syscall wrappers for `geteuid()` + `openat(O_NOFOLLOW)` that
# keep `forbid(unsafe_code)` intact for the entire crate. Per the
# v0.14 Phase 9 audit Sec-H2: every other dep in this block was
# previously also cfg(unix)-gated by accident, which would have
# broken any future Windows build silently because tokio/zeroize/
# serde would have been missing from the dep graph.
rustix.workspace      = true

[dev-dependencies]
tempfile.workspace = true
# `trybuild` is used by the `value_access_trybuild` integration test
# which is `cfg(not(feature = "value-access"))`-gated (i.e. runs on
# the default SAFE feature surface; verifies that value-producing
# APIs are NOT reachable). Invoke via
# `cargo test -p secretenv-core --no-default-features --test value_access_trybuild`.
# Listed as a dev-dep so it
# never enters the default-feature binary closure.
trybuild = "1"

[lints]
workspace = true
