[package]
name        = "secretenv-mcp-config"
description = "SecretEnv — typed `[mcp]` config schema. Lifted out of `secretenv-mcp` v0.16.2 (Phase 3 D.5 — Phase 7 architecture C-1) so future consumers (e.g. `secretenv doctor` validating the `[mcp]` table without spinning up rmcp) can depend on the config types alone."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
anyhow.workspace = true
serde.workspace  = true
toml.workspace   = true

[lints]
workspace = true
