[package]
name        = "secretenv-mcp"
description = "SecretEnv — MCP server library. Stdio-only Model Context Protocol server giving AI agents structured access to the SecretEnv registry without ever exposing a resolved secret value. See [[build-plan-v0.16-mcp]]."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

# `secretenv-core` is declared with `default-features = false` so this
# crate does NOT opt into the v0.15 `value-access` feature (arch-H2
# polarity flip). This is the documentation layer — workspace feature
# unification means the in-workspace build still resolves
# `secretenv-core` with `value-access` enabled because `secretenv-cli`
# opts in. The STRUCTURAL gate that `secretenv-mcp` cannot construct
# or serialize a `Secret<T>` is enforced by `clippy.toml`
# (`disallowed-types`) + `tests/boundary_test.rs`. See SEC-INV-02 +
# build-plan §5.
[dependencies]
secretenv-core      = { path = "../secretenv-core", version = "0.15.0", default-features = false }
# `secretenv-backends-init` is the SHARED factory wiring used by both
# the CLI and the MCP server. Pulled in for `doctor` + `resolve_status`
# which need a live `BackendRegistry` at call time. Naming
# `secretenv_core::Backend` from the resulting trait objects is
# permitted: the SEC-INV-02 clippy ban is scoped to
# `secretenv_core::Secret`, not the `Backend` trait, and `Backend::check()`
# returns `BackendStatus` (a metadata-only enum — never a `Secret`).
# Calls to value-producing methods (`get`, `set`) inside this crate
# would still need to land in `src/internal/` per the documented
# escape-hatch rule in `clippy.toml`.
secretenv-backends-init.workspace = true
secretenv-telemetry.workspace = true
anyhow.workspace              = true
directories.workspace         = true
tokio.workspace               = true
futures.workspace             = true
tracing.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
toml.workspace                = true

# rmcp (the official Rust MCP SDK) — pinned 1.7 per [[build-plan-v0.16-mcp]]
# §3. The `server` default feature pulls `transport-async-rw` (the
# underlying primitive); `transport-io` is the stdio adapter that
# turns `rmcp::transport::stdio()` (returning the `tokio::io::Stdin`
# + `Stdout` pair) into a usable transport for `ServiceExt::serve`.
# `schemars` is required by the `#[tool]` macro for JSON Schema
# generation; `macros` provides the `#[tool]` / `#[tool_router]` /
# `#[tool_handler]` attribute macros themselves.
rmcp = { version = "1.7", default-features = false, features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1.0"

# secretenv-migrate is deferred to Phase 6 (`migrate_alias` tool).

[dev-dependencies]
tempfile.workspace = true
# `trybuild` powers the SEC-INV-02 compile-fail guard at
# `tests/boundary_ui/secret_is_not_serializable.rs` — proves that
# `secretenv_core::Secret<T>` does NOT implement `serde::Serialize`,
# so the boundary closure of `serde_json::to_value(...)` calls in
# tool handler return paths structurally cannot leak a value. Listed
# as dev-dep so it never enters the runtime closure.
trybuild = "1"

[lints]
workspace = true
