[package]
name        = "secretenv-migrate"
description = "SecretEnv — alias-migration engine. `migrate_with_plan` + `build_migration_plan` lifted from secretenv-cli at v0.16 (B1 carry-forward from v0.15) so the MCP server can wrap the same library entry the CLI uses."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
secretenv-core.workspace      = true
secretenv-telemetry.workspace = true
anyhow.workspace              = true
tracing.workspace             = true
# `serde` powers the v0.16.1 D.4 `mcp_safe::McpSafeReport`
# shape-typed projection at the MCP boundary. `MigrateReport`
# itself stays non-Serialize — every wire-format consumer must
# go through the projection.
serde.workspace               = true

[dev-dependencies]
# Used only by the `mcp_safe::tests` module to assert the projection
# doesn't include the dangerous fields (delete_hint, probe_results).
serde_json.workspace = true

[lints]
workspace = true
