[package]
name        = "secretenv-telemetry"
description = "SecretEnv — telemetry skeleton: RedactionPolicy, RedactionEvent, SecretEnvSpan typed attribute builder, and SecretEnvErrorKind. No-op exporters in v0.14; OTLP wiring lands in v0.17."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
# NOTE: `opentelemetry` / `tracing-opentelemetry` are DELIBERATELY
# absent at v0.14. The crate defines the no-op exporter surface and
# the typed attribute builder; v0.17 (`Phase OTel`) adds the real
# SDK + OTLP exporter behind a feature flag without restructuring
# any call site. CI `cargo tree -p secretenv-telemetry` should never
# show opentelemetry as a transitive dep at this version.
#
# `tracing` is currently unused inside this crate's own modules
# (verified by v0.14.x code-hygiene audit). It is retained as the
# explicit anchor for v0.17's planned `tracing::Subscriber` impl
# that bridges `tracing` events into the OTLP exporter — keeping
# the dep in `[dependencies]` rather than re-adding it at v0.17
# avoids a churn-PR on `Cargo.lock` + downstream features.
tracing.workspace = true

[dev-dependencies]
# `trybuild` powers the SEC-INV-19 compile-fail guard at
# `tests/no_redact_alias_in_otel.rs`. Dev-dep only; never enters the
# default-feature binary closure.
trybuild = "1"

[lints]
workspace = true
