[package]
name        = "secretenv-telemetry"
description = "SecretEnv — telemetry skeleton: RedactionPolicy, RedactionEvent, SecretEnvSpan typed attribute builder, and SecretEnvErrorKind. No-op exporters in v0.14; OTLP wiring lands in v0.17."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
# v0.17: OTel SDK + OTLP gRPC exporter live HERE and nowhere else in
# the workspace. `cargo tree -p secretenv-cli | grep opentelemetry`
# must show every opentelemetry-* hit transitively under
# secretenv-telemetry — never as a direct dep of any other crate.
# The Phase 9 release-prep audit enforces this.
tracing.workspace                  = true
tracing-subscriber.workspace       = true                                              # subscriber Layer<S> bound for the tracing-otel bridge layer return type
tokio.workspace                    = true                                              # rt + time for bounded flush
thiserror.workspace                = true
# v0.17 build plan was drafted against OTel 0.27; the ecosystem renamed
# `opentelemetry-sdk` → `opentelemetry_sdk` and bumped to 0.32 in early
# 2026. We track current crates.io versions, not the pre-rename plan.
opentelemetry                      = { version = "0.32", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk                  = { version = "0.32", features = ["rt-tokio", "trace", "metrics", "logs", "testing"] }
opentelemetry-otlp                 = { version = "0.32", features = ["grpc-tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = { version = "0.32" }
opentelemetry-stdout               = { version = "0.32", features = ["trace", "metrics", "logs"] }
tracing-opentelemetry              = { version = "0.33" }
# v0.17 Phase 7b — `host.name` OTel standard resource attribute via
# the dedicated `hostname` crate. Small (Apache-2.0 OR MIT), zero
# transitive deps. Safer than reading `/etc/hostname` directly +
# more portable than `rustix::system::uname`.
hostname                           = "0.4"

[dev-dependencies]
# `trybuild` powers the SEC-INV-19 compile-fail guard at
# `tests/no_redact_alias_in_otel.rs`. Dev-dep only; never enters the
# default-feature binary closure.
trybuild = "1"

[lints]
workspace = true
