[package]
name        = "backend-local"
description = "Local filesystem backend for SecretEnv"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
secretenv-core.workspace = true
anyhow.workspace         = true
async-trait.workspace    = true
tokio.workspace          = true
toml.workspace           = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
